third_party/move/move-compiler-v2/tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.exp

Diagnostics:
error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
  ┌─ tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:4:9
  │
4 │     fun f<T1, T2, T3>() {
  │         ^
  │
  = `f<T1, T2, T3>` calls `g<T2, T3, T1>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:5
  = `g<T2, T3, T1>` calls `h<T2, T3, M::S<T1>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:9
  = `h<T2, T3, M::S<T1>>` calls `f<T2, bool, M::S<T1>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:14

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
  ┌─ tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:8:9
  │
8 │     fun g<T1, T2, T3>() {
  │         ^
  │
  = `g<T1, T2, T3>` calls `h<T1, T2, M::S<T3>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:9
  = `h<T1, T2, M::S<T3>>` calls `f<T1, bool, M::S<T3>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:14
  = `f<T1, bool, M::S<T3>>` calls `g<bool, M::S<T3>, T1>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:5

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:12:9
   │
12 │     fun h<T1, T2, T3>() {
   │         ^
   │
   = `h<T1, T2, T3>` calls `f<T1, bool, T3>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:14
   = `f<T1, bool, T3>` calls `g<bool, T3, T1>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:5
   = `g<bool, T3, T1>` calls `h<bool, T3, M::S<T1>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_three_args_type_con_non_generic_types_ok.move:9
